--- a/package.json
+++ b/package.json
@@ -33,75 +33,93 @@
   "exports": {
     ".": {
       "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     },
     "./checkout": {
       "import": "./dist/modules/checkout.mjs",
-      "require": "./dist/modules/checkout.js"
+      "require": "./dist/modules/checkout.js",
+      "types": "./dist/modules/checkout.d.ts"
     },
     "./customer": {
       "import": "./dist/modules/customer.mjs",
-      "require": "./dist/modules/customer.js"
+      "require": "./dist/modules/customer.js",
+      "types": "./dist/modules/customer.d.ts"
     },
     "./client": {
       "import": "./dist/client/index.mjs",
-      "require": "./dist/client/index.js"
+      "require": "./dist/client/index.js",
+      "types": "./dist/client/index.d.ts"
     },
     "./discount": {
       "import": "./dist/modules/discount.mjs",
-      "require": "./dist/modules/discount.js"
+      "require": "./dist/modules/discount.js",
+      "types": "./dist/modules/discount.d.ts"
     },
     "./file": {
       "import": "./dist/modules/file.mjs",
-      "require": "./dist/modules/file.js"
+      "require": "./dist/modules/file.js",
+      "types": "./dist/modules/file.d.ts"
     },
     "./licenseKey": {
       "import": "./dist/modules/licenseKey.mjs",
-      "require": "./dist/modules/licenseKey.js"
+      "require": "./dist/modules/licenseKey.js",
+      "types": "./dist/modules/licenseKey.d.ts"
     },
     "./licenseKeyInstance": {
       "import": "./dist/modules/licenseKeyInstance.mjs",
-      "require": "./dist/modules/licenseKeyInstance.js"
+      "require": "./dist/modules/licenseKeyInstance.js",
+      "types": "./dist/modules/licenseKeyInstance.d.ts"
     },
     "./modules": {
       "import": "./dist/modules/index.mjs",
-      "require": "./dist/modules/index.js"
+      "require": "./dist/modules/index.js",
+      "types": "./dist/modules/index.d.ts"
     },
     "./order": {
       "import": "./dist/modules/order.mjs",
-      "require": "./dist/modules/order.js"
+      "require": "./dist/modules/order.js",
+      "types": "./dist/modules/order.d.ts"
     },
     "./orderItem": {
       "import": "./dist/modules/orderItem.mjs",
-      "require": "./dist/modules/orderItem.js"
+      "require": "./dist/modules/orderItem.js",
+      "types": "./dist/modules/orderItem.d.ts"
     },
     "./product": {
       "import": "./dist/modules/product.mjs",
-      "require": "./dist/modules/product.js"
+      "require": "./dist/modules/product.js",
+      "types": "./dist/modules/product.d.ts"
     },
     "./store": {
       "import": "./dist/modules/store.mjs",
-      "require": "./dist/modules/store.js"
+      "require": "./dist/modules/store.js",
+      "types": "./dist/modules/store.d.ts"
     },
     "./subscription": {
       "import": "./dist/modules/subscription.mjs",
-      "require": "./dist/modules/subscription.js"
+      "require": "./dist/modules/subscription.js",
+      "types": "./dist/modules/subscription.d.ts"
     },
     "./subscriptionInvoice": {
       "import": "./dist/modules/subscriptionInvoice.mjs",
-      "require": "./dist/modules/subscriptionInvoice.js"
+      "require": "./dist/modules/subscriptionInvoice.js",
+      "types": "./dist/modules/subscriptionInvoice.d.ts"
     },
     "./types": {
       "import": "./dist/types.mjs",
-      "require": "./dist/types.js"
+      "require": "./dist/types.js",
+      "types": "./dist/types.d.ts"
     },
     "./user": {
       "import": "./dist/modules/user.mjs",
-      "require": "./dist/modules/user.js"
+      "require": "./dist/modules/user.js",
+      "types": "./dist/modules/user.d.ts"
     },
     "./variant": {
       "import": "./dist/modules/variant.mjs",
-      "require": "./dist/modules/variant.js"
+      "require": "./dist/modules/variant.js",
+      "types": "./dist/modules/variant.d.ts"
     }
   },
   "typesVersions": {
